Fix the images to be smaller on mobile devices

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -107,6 +107,7 @@ li {
 
 img {
   max-width: 100%;
+  max-height: 100vh;
   height: auto;
 }
 
